--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
   "devDependencies": {
     "ts-loader": "^3.1.0",
     "typescript": "^2.5.3",
+    "typings": "^2.1.1",
     "webpack": "^2.7.0"
+  },
+  "dependencies": {
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   }
 }
