--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/BrettKoenig/ReactReduxIntro#readme",
   "devDependencies": {
+    "redux-devtools": "^3.4.0",
     "ts-loader": "^3.1.0",
     "typescript": "^2.5.3",
     "typings": "^2.1.1",
@@ -26,6 +27,8 @@
   },
   "dependencies": {
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   }
 }
