--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "dev": "webpack-dev-server --output-public-path=/build/"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,8 @@
     "ts-loader": "^3.1.0",
     "typescript": "^2.5.3",
     "typings": "^2.1.1",
-    "webpack": "^2.7.0"
+    "webpack": "^2.7.0",
+    "webpack-dev-server": "^2.9.3"
   },
   "dependencies": {
     "react": "^16.0.0",
